# advoc2017

./: .gitignore  README.md  advoc2017.cabal  stack.yaml
src/: Day1.hs  Day10A.hs  Day10B.hs  Day12A.hs  Day12B.hs  Day13A.hs  Day13B.hs  Day15A.hs  Day15B.hs  Day18A.hs  Day18B.hs  Day1A.hs  Day1B.hs  Day22A.hs  Day22B.hs  Day2A.hs  Day2B.hs  Day3A.hs  Day3B.hs  Day4A.hs  Day4B.hs  Day5A.hs  Day5B.hs  Day6A.hs  Day6B.hs  Day7A.hs  Day7B.hs  Day8A.hs  Day8B.hs  Day9A.hs  Day9B.hs
