name:                advoc2017
version:             0.1.0.0
synopsis:			 Advent of Code 2017 
-- description:
homepage:            https://github.com/TRManderson/advoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2017 Tom Manderson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1
  hs-source-dirs:      src
  main-is:             Day1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
