name:                advoc2017
version:             0.1.0.0
synopsis:            Advent of Code 2017
-- description:
homepage:            https://github.com/TRManderson/advoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2017 Tom Manderson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1a
  hs-source-dirs:      src
  main-is:             Day1A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day1b
  hs-source-dirs:      src
  main-is:             Day1B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , transformers

executable day2a
  hs-source-dirs:      src
  main-is:             Day2A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split

executable day2b
  hs-source-dirs:      src
  main-is:             Day2B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split

executable day3a
  hs-source-dirs:      src
  main-is:             Day3A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , transformers

executable day3b
  hs-source-dirs:      src
  main-is:             Day3B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , transformers
                     , containers

executable day4a
  hs-source-dirs:      src
  main-is:             Day4A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , discrimination

executable day4b
  hs-source-dirs:      src
  main-is:             Day4B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , discrimination

executable day5a
  hs-source-dirs:      src
  main-is:             Day5A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector

executable day5b
  hs-source-dirs:      src
  main-is:             Day5B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
