name:                advoc2017
version:             0.1.0.0
synopsis:            Advent of Code 2017
-- description:
homepage:            https://github.com/TRManderson/advoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2017 Tom Manderson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1a
  hs-source-dirs:      src
  main-is:             Day1A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day1b
  hs-source-dirs:      src
  main-is:             Day1B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , transformers

executable day2a
  hs-source-dirs:      src
  main-is:             Day2A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split

executable day2b
  hs-source-dirs:      src
  main-is:             Day2B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split

executable day3a
  hs-source-dirs:      src
  main-is:             Day3A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , transformers

executable day3b
  hs-source-dirs:      src
  main-is:             Day3B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , transformers
                     , containers

executable day4a
  hs-source-dirs:      src
  main-is:             Day4A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , discrimination

executable day4b
  hs-source-dirs:      src
  main-is:             Day4B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , discrimination

executable day5a
  hs-source-dirs:      src
  main-is:             Day5A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector

executable day5b
  hs-source-dirs:      src
  main-is:             Day5B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector

executable day6a
  hs-source-dirs:      src
  main-is:             Day6A.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , split
                     , unordered-containers
                     , vector
                     , vector-instances
                     , lens
                     , transformers
                     , monad-loops

executable day6b
  hs-source-dirs:      src
  main-is:             Day6B.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , split
                     , unordered-containers
                     , vector
                     , vector-instances
                     , lens
                     , transformers
                     , monad-loops

executable day7a
  hs-source-dirs:      src
  main-is:             Day7A.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fgl
                     , attoparsec
                     , text

executable day7b
  hs-source-dirs:      src
  main-is:             Day7B.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fgl
                     , attoparsec
                     , text
                     , containers
                     , discrimination

executable day9a
  hs-source-dirs:      src
  main-is:             Day9A.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text

executable day9b
  hs-source-dirs:      src
  main-is:             Day9B.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text

executable day12a
  hs-source-dirs:      src
  main-is:             Day12A.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fgl
                     , attoparsec
                     , text

executable day12b
  hs-source-dirs:      src
  main-is:             Day12B.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fgl
                     , attoparsec
                     , text

executable day15a
  hs-source-dirs:      src
  main-is:             Day15A.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day15b
  hs-source-dirs:      src
  main-is:             Day15B.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day18a
  hs-source-dirs:      src
  main-is:             Day18A.hs
  ghc-options:         -threaded -O2
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , transformers
                     , containers
                     , lens
                     , vector

executable day18b
  hs-source-dirs:      src
  main-is:             Day18B.hs
  ghc-options:         -threaded -O2
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , transformers
                     , containers
                     , lens
                     , vector

executable day22a
  hs-source-dirs:      src
  main-is:             Day22A.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , lens
                     , containers
  default-language:    Haskell2010

executable day22b
  hs-source-dirs:      src
  main-is:             Day22B.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , lens
                     , containers
  default-language:    Haskell2010
